--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["development-tools::build-utils", "rust-patterns", "development-to
 syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-service-builder-macro = { path = "service-builder-macro" }
+service-builder-macro = { path = "service-builder-macro", version = "0.1.0" }
 thiserror = "2.0.7"
 
 [workspace]
