--- a/service-builder-macro/Cargo.toml
+++ b/service-builder-macro/Cargo.toml
@@ -2,6 +2,12 @@
 name = "service-builder-macro"
 version = "0.1.0"
 edition = "2021"
+authors = ["anil <anil.krcp@gmail.com>"]
+description = "A lightweight, type-safe service construction library for Rust that provides compile-time dependency injection through builder pattern"
+license = "MIT"
+repository = "https://github.com/krcpa/service-builder"
+keywords = ["dependency-injection", "builder-pattern", "ioc", "di", "type-safe"]
+categories = ["development-tools::build-utils", "rust-patterns", "development-tools"]
 
 [lib]
 proc-macro = true
