--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ keywords = ["dependency-injection", "builder-pattern", "ioc", "di", "type-safe"]
 categories = ["development-tools::build-utils", "rust-patterns", "development-tools"]
 
 [dependencies]
+service-builder-macro = { path = "service-builder-macro" }
 syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 thiserror = "2.0.7"
-service-builder-macro = "0.1.0"
 
 [workspace]
 members = [
